tests/checker/diagnostics/0074_core_and_int_07.ml.infer.expected
File "0074_core_and_int_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0074_core_and_int_07 is not a valid module name.

File "0074_core_and_int_07.ml", line 2, characters 29-30:
2 | let _ = if true then true && 0 else true
                                 ^
Error: The constant 0 has type int but an expression was expected of type
         bool
